grammars/tree-sitter/grammar.js
		program: ($) => seq(optional($.hash_bang_line), repeat($.statement)),

		expression_statement: ($) => seq($.expression, $._semicolon),

		variable_declaration: ($) =>
			seq(choice('var', 'let', 'const'), commaSep1($.variable_declarator), $._semicolon),

		variable_declarator: ($) =>
			seq(
				field('name', choice($.identifier, $._destructuring_pattern)),
				optional($._type_annotation),
				optional($.initializer),
			),

		component_declaration: ($) =>
			prec.left(
				PREC.DECLARATION,
				seq(
					optional('export'),
					optional('default'),
					'component',
					optional(field('name', $.identifier)),
					optional(field('type_parameters', $.type_parameters)),
					field('parameters', $.formal_parameters),
					optional($._type_annotation),
					field('body', $.component_body),
				),
			),

		component_body: ($) => seq('{', repeat($.component_statement), '}'),

		component_statement: ($) =>
			choice(
				$.jsx_element,
				$.jsx_self_closing_element,
				$.server_block,
				$.variable_declaration,
				$.lexical_declaration,
				$.function_declaration,
				$.class_declaration,
				$.expression_statement,
				$.if_statement,
				$.switch_statement,
				$.for_statement,
				$.for_in_statement,
				$.for_of_statement,
				$.while_statement,
				$.do_statement,
				$.try_statement,
				$.return_statement,
				$.throw_statement,
				$.break_statement,
				$.continue_statement,
				$.debugger_statement,
				$.empty_statement,
				$.style_element,
			),

		formal_parameters: ($) => seq('(', optional(commaSep($._formal_parameter)), optional(','), ')'),

		_formal_parameter: ($) => choice($.required_parameter, $.rest_parameter),

		_destructuring_pattern: ($) => choice($.object_pattern, $.array_pattern),

		server_member_expression: ($) => seq('#ripple.server', '.', field('property', $.identifier)),

		style_member_expression: ($) => seq('#ripple.style', '.', field('property', $.identifier)),

		style_subscript_expression: ($) => seq('#ripple.style', '[', field('index', $.expression), ']'),

		unbox_expression: ($) =>
			prec.left(
				PREC.UNBOX,
				seq(
					'@',
					choice(
						$.identifier,
						$.member_expression,
						$.subscript_expression,
						$.parenthesized_expression,
					),
				),
			),

		reactive_object: ($) =>
			seq(
				'#ripple{',
				commaSep(
					choice(
						$.pair,
						$.spread_element,
						$.method_definition,
						$.shorthand_property_identifier,
						$._reserved_identifier,
					),
				),
				optional(','),
				'}',
			),

		reactive_array: ($) =>
			seq('#ripple[', commaSep(choice($.expression, $.spread_element)), optional(','), ']'),

		augmented_assignment_expression: ($) =>
			prec.right(
				PREC.ASSIGN,
				seq(
					field(
						'left',
						choice($.identifier, $.member_expression, $.subscript_expression, $.unbox_expression),
					),
					field(
						'operator',
						choice(
							'+=',
							'-=',
							'*=',
							'/=',
							'%=',
							'^=',
							'&=',
							'|=',
							'>>=',
							'>>>=',
							'<<=',
							'**=',
							'&&=',
							'||=',
							'??=',
						),
					),
					field('right', $.expression),
				),
			),

		update_expression: ($) =>
			prec.left(
				PREC.INC,
				choice(
					seq(field('argument', $.expression), field('operator', choice('++', '--'))),
					seq(field('operator', choice('++', '--')), field('argument', $.expression)),
				),
			),

		call_expression: ($) =>
			prec(
				PREC.CALL,
				seq(
					field('function', choice($.expression, $.import)),
					field('arguments', choice($.arguments, $.template_string)),
				),
			),

		new_expression: ($) =>
			prec.right(
				PREC.NEW,
				seq(
					'new',
					field('constructor', $.primary_expression),
					optional(field('arguments', $.arguments)),
				),
			),

		member_expression: ($) =>
			prec(
				PREC.MEMBER,
				seq(
					field('object', choice($.expression, $.primary_expression)),
					choice('.', '?.'),
					field('property', choice($.identifier, $.private_property_identifier)),
				),
			),

		arguments: ($) =>
			seq('(', commaSep(choice($.expression, $.spread_element)), optional(','), ')'),

		arrow_function: ($) =>
			seq(
				optional('async'),
				choice(field('parameter', $.identifier), field('parameters', $.formal_parameters)),
				optional($._type_annotation),
				'=>',
				field('body', choice($.expression, $.statement_block)),
			),

		pair: ($) =>
			prec(PREC.OBJECT, seq(field('key', $.property_name), ':', field('value', $.expression))),

		property_name: ($) =>
			choice(
				$.identifier,
				$.private_property_identifier,
				$.string,
				$.number,
				$.computed_property_name,
			),

		array: ($) => seq('[', commaSep(choice($.expression, $.spread_element)), optional(','), ']'),

		jsx_element: ($) =>
			seq(
				field('open_tag', $.jsx_opening_element),
				repeat(field('children', $._jsx_child)),
				field('close_tag', $.jsx_closing_element),
			),

		jsx_opening_element: ($) =>
			seq(
				'<',
				optional('@'),
				field('name', $.jsx_element_name),
				repeat(field('attribute', $._jsx_attribute)),
				'>',
			),

		jsx_closing_element: ($) => seq('</', optional('@'), field('name', $.jsx_element_name), '>'),

		// In Ripple, namespaced TSX-compat elements like <tsx:react> cannot be self-closing
		// so we disallow jsx_namespace_name here by using a narrowed name rule.
		jsx_element_name: ($) =>
			choice(
				$.identifier,
				$.jsx_namespace_name,
				$.jsx_member_name,
				$.member_expression,
				$.unbox_expression,
			),

		// Non-namespaced variant (used for self-closing elements)
		_jsx_attribute: ($) => choice($.jsx_attribute, $.jsx_expression),

		jsx_attribute: ($) =>
			seq(
				field('name', choice($.identifier, $.jsx_namespace_name)),
				optional(seq('=', field('value', $._jsx_attribute_value))),
			),

		jsx_expression: ($) =>
			seq(
				'{',
				optional(
					choice(
						$.expression,
						$.spread_element,
						seq('...', $.expression),
						seq('ref', choice($.identifier, $.arrow_function, $.function_expression)),
						seq('html', $.expression),
						repeat1($.component_statement),
					),
				),
				'}',
			),

		_jsx_attribute_value: ($) =>
			choice($.string, $.jsx_expression, $.jsx_element, $.jsx_self_closing_element),

		_jsx_child: ($) =>
			choice($.jsx_text, $.jsx_element, $.jsx_self_closing_element, $.jsx_expression),

		identifier: ($) => {
			const alpha = /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			const alphanumeric =
				/[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B]/;
			return token(seq(alpha, repeat(alphanumeric)));
		},

		ripple_namespace_identifier: ($) => '#ripple',

		_reserved_identifier: ($) =>
			choice('arguments', 'await', 'component', 'fragment', 'track', 'untrack'),

		number: ($) => {
			const hex_literal = seq(choice('0x', '0X'), /[\da-fA-F](_?[\da-fA-F])*/);

			const decimal_digits = /\d(_?\d)*/;
			const signed_integer = seq(optional(choice('-', '+')), decimal_digits);
			const exponent_part = seq(choice('e', 'E'), signed_integer);

			const binary_literal = seq(choice('0b', '0B'), /[0-1](_?[0-1])*/);

			const octal_literal = seq(choice('0o', '0O'), /[0-7](_?[0-7])*/);

			const bigint_literal = seq(
				choice(hex_literal, binary_literal, octal_literal, decimal_digits),
				'n',
			);

			const decimal_integer_literal = choice(
				'0',
				seq(optional('0'), /[1-9]/, optional(seq(optional('_'), decimal_digits))),
			);

			const decimal_literal = choice(
				seq(decimal_integer_literal, '.', optional(decimal_digits), optional(exponent_part)),
				seq('.', decimal_digits, optional(exponent_part)),
				seq(decimal_integer_literal, exponent_part),
				decimal_digits,
			);

			return token(
				choice(hex_literal, decimal_literal, binary_literal, octal_literal, bigint_literal),
			);
		},

		string: ($) =>
			choice(
				seq('"', repeat(choice(token.immediate(prec(1, /[^"\\\n]+/)), $.escape_sequence)), '"'),
				seq("'", repeat(choice(token.immediate(prec(1, /[^'\\\n]+/)), $.escape_sequence)), "'"),
			),

		_type_annotation: ($) => seq(':', $.type),

		initializer: ($) => seq('=', $.expression),

		_semicolon: ($) => choice($._automatic_semicolon, ';'),
	},
});

function commaSep(rule) {
	return optional(commaSep1(rule));
}

function commaSep1(rule) {
	return seq(rule, repeat(seq(',', rule)));
}
