grammars/tree-sitter/test/corpus/reactivity.txt
==================
Reactive Primitives - track and unbox
==================

component Counter() {
  let count = #ripple.track(0);
  <div>{@count}</div>
}

---

(program
  (component_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (variable_declaration
          (variable_declarator
            name: (identifier)
            (initializer
              (call_expression
                function: (member_expression
                  object: (ripple_namespace_identifier)
                  property: (identifier))
                arguments: (arguments
                  (number)))))))
      (component_statement
        (expression_statement
          (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier)))
            children: (jsx_expression
              (component_statement
                (expression_statement
                  (unbox_expression
                    (identifier)))))
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier)))))))))

==================
Reactive Arrays
==================

let items = #ripple[1, 2, 3];

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (reactive_array
          (number)
          (number)
          (number))))))

==================
Reactive Objects
==================

let obj = #ripple{a: 1, b: 2};

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (reactive_object
          (pair
            key: (property_name
              (identifier))
            value: (number))
          (pair
            key: (property_name
              (identifier))
            value: (number)))))))

==================
Unbox Expression
==================

component App() {
  let count = #ripple.track(0);
  <button onClick={() => @count++}>{'+'}</button>
}

---

(program
  (component_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (variable_declaration
          (variable_declarator
            name: (identifier)
            (initializer
              (call_expression
                function: (member_expression
                  object: (ripple_namespace_identifier)
                  property: (identifier))
                arguments: (arguments
                  (number)))))))
      (component_statement
        (expression_statement
          (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier))
              attribute: (jsx_attribute
                name: (identifier)
                value: (jsx_expression
                  (component_statement
                    (expression_statement
                      (arrow_function
                        parameters: (formal_parameters)
                        body: (update_expression
                          argument: (unbox_expression
                            (identifier)))))))))
            children: (jsx_expression
              (component_statement
                (expression_statement
                  (string))))
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier)))))))))

==================
Tracked Map and Set Shorthand
==================

const set = new #ripple.set([1, 2, 3]);
const map = new #ripple.map([['a', 1], ['b', 2]]);

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (new_expression
          constructor: (member_expression
            object: (ripple_namespace_identifier)
            property: (identifier))
          arguments: (arguments
            (array
              (number)
              (number)
              (number)))))))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (new_expression
          constructor: (member_expression
            object: (ripple_namespace_identifier)
            property: (identifier))
          arguments: (arguments
            (array
              (array
                (string)
                (number))
              (array
                (string)
                (number)))))))))

==================
Ripple Server/Style Member Expressions
==================

const serverData = #ripple.server.data;
const styleClass = #ripple.style.button;
const styleToken = #ripple.style['button'];

---

(program
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (server_member_expression
          property: (identifier)))))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (style_member_expression
          property: (identifier)))))
  (variable_declaration
    (variable_declarator
      name: (identifier)
      (initializer
        (style_subscript_expression
          index: (string))))))

==================
Augmented Assignment with Unbox
==================

component App() {
  let count = #ripple.track(0);
  <button onClick={() => @count += 1}>{'+'}</button>
}

---

(program
  (component_declaration
    name: (identifier)
    parameters: (formal_parameters)
    body: (component_body
      (component_statement
        (variable_declaration
          (variable_declarator
            name: (identifier)
            (initializer
              (call_expression
                function: (member_expression
                  object: (ripple_namespace_identifier)
                  property: (identifier))
                arguments: (arguments
                  (number)))))))
      (component_statement
        (expression_statement
          (jsx_element
            open_tag: (jsx_opening_element
              name: (jsx_element_name
                (identifier))
              attribute: (jsx_attribute
                name: (identifier)
                value: (jsx_expression
                  (component_statement
                    (expression_statement
                      (arrow_function
                        parameters: (formal_parameters)
                        body: (augmented_assignment_expression
                          left: (unbox_expression
                            (identifier))
                          right: (number))))))))
            children: (jsx_expression
              (component_statement
                (expression_statement
                  (string))))
            close_tag: (jsx_closing_element
              name: (jsx_element_name
                (identifier)))))))))
